// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Content 1`] = `
<div
  className="centered-narrow"
>
  <div
    className="Content"
  >
    <form
      className="Fields"
    >
      <div
        className="fieldset active form-group"
      >
        <h2>
          Introduction
        </h2>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
        <section
          className="Questions"
        >
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="buildingOwner"
            >
              Building Owner
            </label>
            <input
              className="form-control"
              required={true}
              type="text"
            />
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="address"
            >
              Address
            </label>
            <input
              className="form-control"
              required={true}
              type="text"
            />
          </div>
        </section>
        <section
          className="Questions"
        >
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="length"
            >
              Length (facing east)
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                m
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="width"
            >
              Width (facing south)
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                m
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="height"
            >
              Height above grade
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                m
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="depth"
            >
              Length (facing east)
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                m
              </span>
            </div>
          </div>
          <div
            className="spacer"
          >
             
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="interiorFloorArea"
            >
              Interior Floor Area
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                m²
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="people"
            >
              People
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                #
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="units"
            >
              Units
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                #
              </span>
            </div>
          </div>
          <div
            className="spacer"
          >
             
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="roofArea"
            >
              Roof Area
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                m²
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="floorArea"
            >
              Floor Area (footprint)
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                m²
              </span>
            </div>
          </div>
        </section>
        <section
          className="Questions"
        >
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="availableSolarArea"
            >
              Available Solar Area
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                m²
              </span>
            </div>
          </div>
          <div
            className="spacer"
          >
             
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="north"
            >
              North
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                m²
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="east"
            >
              East
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                m²
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="south"
            >
              South
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                m²
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="west"
            >
              West
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                m²
              </span>
            </div>
          </div>
          <div
            className="spacer"
          >
             
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="exterialSolidDoorArea"
            >
              Exterior Solid Door Area
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                m²
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="buildingVolume"
            >
              Building Volume
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                m²
              </span>
            </div>
          </div>
        </section>
        <section
          className="Questions"
        >
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="location"
            >
              Location
            </label>
            <input
              className="form-control"
              required={false}
              type="text"
            />
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="heatingDegreeDays"
            >
              Heating Degree Days
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                HDD18
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="heatingDegreeHours"
            >
              Heating Degree Hours
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                kKh/a
              </span>
            </div>
          </div>
        </section>
      </div>
      <div
        className="fieldset  form-group"
      >
        <h2>
          Parameters - Model A
        </h2>
        <p>
          How is the existing home built?
        </p>
        <section
          className="Questions"
        >
          <div
            className="spacer"
          >
             
          </div>
          <div
            className="spacer"
          >
             
          </div>
        </section>
        <section
          className="Questions"
        >
          <div
            className="spacer"
          >
             
          </div>
        </section>
        <section
          className="Questions"
        >
          <div
            className="spacer"
          >
             
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="carbonPrice"
            >
              Carbon Price
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/tonne
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="electrityPrice"
            >
              Electricity Price
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="electrityCarbon"
            >
              Electricity Carbon
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                kg/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="cleanElectricityPrice"
            >
              Clean Electricity Price
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="cleanElectrityCarbon"
            >
              Clean Electricity Carbon
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                kg/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="naturalGasFossilPrice"
            >
              Natural Gas (Fossil) Price
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="naturalGasFossilCarbon"
            >
              Natural Gas (Fossil) Carbon
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                kg/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="cleanGasPrice"
            >
              Clean Gas Price
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="cleanGasCarbon"
            >
              Clean Gas Carbon
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                kg/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="propanePrice"
            >
              Propane Price
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="propaneCarbon"
            >
              Propane Carbon
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                kg/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="woodPelletsPrice"
            >
              Wood Pellets Price
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="woodPelletsCarbon"
            >
              Wood Pellets Carbon
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                kg/kWh
              </span>
            </div>
          </div>
        </section>
      </div>
      <div
        className="fieldset  form-group"
      >
        <h2>
          Parameters - Model B
        </h2>
        <p>
          What improvements would you like to consider?
        </p>
        <section
          className="Questions"
        >
          <div
            className="spacer"
          >
             
          </div>
          <div
            className="spacer"
          >
             
          </div>
        </section>
        <section
          className="Questions"
        >
          <div
            className="spacer"
          >
             
          </div>
        </section>
        <section
          className="Questions"
        >
          <div
            className="spacer"
          >
             
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="carbonPrice"
            >
              Carbon Price
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/tonne
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="electrityPrice"
            >
              Electricity Price
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="electrityCarbon"
            >
              Electricity Carbon
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                kg/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="cleanElectricityPrice"
            >
              Clean Electricity Price
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="cleanElectrityCarbon"
            >
              Clean Electricity Carbon
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                kg/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="naturalGasFossilPrice"
            >
              Natural Gas (Fossil) Price
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="naturalGasFossilCarbon"
            >
              Natural Gas (Fossil) Carbon
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                kg/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="cleanGasPrice"
            >
              Clean Gas Price
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="cleanGasCarbon"
            >
              Clean Gas Carbon
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                kg/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="propanePrice"
            >
              Propane Price
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="propaneCarbon"
            >
              Propane Carbon
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                kg/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="woodPelletsPrice"
            >
              Wood Pellets Price
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/kWh
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="woodPelletsCarbon"
            >
              Wood Pellets Carbon
            </label>
            <input
              className="form-control"
              required={true}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                kg/kWh
              </span>
            </div>
          </div>
        </section>
      </div>
      <div
        className="fieldset  form-group"
      >
        <h2>
          Financing the Net-zero Upgrade
        </h2>
        <p>
          Lorem ipsum
        </p>
        <section
          className="Questions"
        >
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="designCost"
            >
              Design Unit Cost (Installed)
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="designQuantity"
            >
              Design Quantity
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="airtightnessCost"
            >
              Airtightness Unit Cost (Installed)
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/m² of envelope
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="airtightnessQuantity"
            >
              Airtightness Quantity
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="windowsCost"
            >
              Windows Unit Cost (Installed)
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/m² of window
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="windowsQuantity"
            >
              Windows Quantity
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="insulationCost"
            >
              Insulation Unit Cost (Installed)
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/m² of envelope
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="insulationQuantity"
            >
              Insulation Quantity
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
          </div>
        </section>
        <section
          className="Questions"
        >
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="ventilationCost"
            >
              Ventilation with Energy Recovery (ERV/HRV) Unit Cost (Installed)
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="ventilationQuantity"
            >
              Ventilation with Energy Recovery (ERV/HRV) Quantity
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="heatPumpCost"
            >
              Heat Pump Unit Cost (Installed)
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/m² of envelope
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="heatPumpQuantity"
            >
              Heat Pump Quantity
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="waterHeaterCost"
            >
              Water Heater, Drain Water Heat Recovery Unit Cost (Installed)
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/m² of window
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="waterHeaterQuantity"
            >
              Water Heater, Drain Water Heat Recovery Quantity
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
          </div>
        </section>
        <section
          className="Questions"
        >
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="solarCost"
            >
              Solar PV 13.3 kW Unit Cost (Installed)
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="solarQuantity"
            >
              Solar PV 13.3 kW Quantity
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/m² of solar
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="batteryCost"
            >
              Battery Unit Cost (Installed)
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $/m² of solar
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="batteryQuantity"
            >
              Battery Quantity
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="energyMonitorCost"
            >
              Energy Monitor Unit Cost (Installed)
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
            <div
              className="input-group-append"
            >
              <span
                className="input-group-text"
              >
                $
              </span>
            </div>
          </div>
          <div
            className="input-group"
          >
            <label
              className=""
              htmlFor="energyMonitorQuantity"
            >
              Energy Monitor Quantity
            </label>
            <input
              className="form-control"
              required={false}
              type="number"
            />
          </div>
        </section>
      </div>
      <div
        className="fieldset  form-group"
      >
        <h2>
          Business Case
        </h2>
        <p>
          Lorem ipsum
        </p>
        <section
          className="Questions"
        />
        <section
          className="Questions"
        />
      </div>
    </form>
    <div
      className="Navigation"
    >
      <button
        onClick={[Function]}
      >
        introduction
      </button>
      <br />
      <button
        onClick={[Function]}
      >
        Parameters A
      </button>
      <br />
      <button
        onClick={[Function]}
      >
        Parameters B
      </button>
      <br />
      <button
        onClick={[Function]}
      >
        financing
      </button>
      <br />
      <button
        onClick={[Function]}
      >
        business
      </button>
      <br />
    </div>
  </div>
</div>
`;

exports[`renders formatQuestion with float question 1`] = `
<div
  className="input-group"
>
  <label
    className=""
    htmlFor="questionFloat"
  >
    Float
  </label>
  <input
    className="form-control"
    required={true}
    type="number"
  />
</div>
`;

exports[`renders formatQuestion with gap question 1`] = `
<div
  className="spacer"
>
   
</div>
`;

exports[`renders formatQuestion with integer question 1`] = `
<div
  className="input-group"
>
  <label
    className=""
    htmlFor="question2Key"
  >
    Integer
  </label>
  <input
    className="form-control"
    required={false}
    type="number"
  />
  <div
    className="input-group-append"
  >
    <span
      className="input-group-text"
    >
      IBU
    </span>
  </div>
</div>
`;

exports[`renders formatQuestion with text question 1`] = `
<div
  className="input-group"
>
  <label
    className=""
    htmlFor="question3Key"
  >
    Text Label
  </label>
  <input
    className="form-control"
    required={true}
    type="text"
  />
</div>
`;
